laying the groundwork, squashed merge bugs

--- a/css/app.less
+++ b/css/app.less
@@ -2850,6 +2850,12 @@ i { color: @gray_60; }
 
 #offer-icon { margin-top: 4px; }
 
+.sched-step2-row {
+  min-height: 72px;
+  padding: 15px;
+  border-top: 1px solid @gray_20;
+}
+
 
 /*** Scheduling Step 4 ***/
 
